--- a/projetoesw3rd/Views/Account/Login.cshtml
+++ b/projetoesw3rd/Views/Account/Login.cshtml
@@ -15,10 +15,10 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.ID, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.ID, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.ID, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
@@ -31,8 +31,8 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+                            @Html.CheckBoxFor(m => m.Gravar)
+                            @Html.LabelFor(m => m.Gravar)
                         </div>
                     </div>
                 </div>
