--- a/projetoesw3rd/Views/Home/Index.cshtml
+++ b/projetoesw3rd/Views/Home/Index.cshtml
@@ -2,30 +2,68 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="~/images/img1.svg" alt="img1" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/img2.svg" alt="img2" class="img-responsive" />
+        </div>
+        <div class="item">
+            <img src="~/images/img3.svg" alt="img3" class="img-responsive" />
+        </div>
+    </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        <h2> Vem conhecer os nossos cursos disponiveis! </h2>>
+        <ul>
+            <li>
+                Para saber mais informacoes sobre as nossas ofertas de curso clique neste
+                <a href="https://www.si.ips.pt/ests_si/web_base.gera_pagina?p_pagina=1166">link</a>
+            </li>
+        </ul>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        <h2>Vem conhecer a nossa proposta!</h2>
+        <ul>
+            <li>
+                Para saberes mais informacoes sobre as nossas propostas de erasmus clica neste
+                <a href="https://www.ips.pt/ips_si/web_base.gera_pagina?P_pagina=30435">link</a>
+            </li>
+        </ul>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        <h2>O nosso Campus! </h2>
+        <ul>
+            <li>
+                Para conheceres o nosso campus na integridade clica no
+                <a href="goo.gl/e9pJ89">link</a>
+            </li>
+        </ul>
+    </div>
+    <div class="col-md-3">
+        <h2>Vem conhecer a nossa pagina do Facebook! </h2>
+        <ul>
+            <li>
+                Para conheceres a nossa pagina do Facebook clica neste
+                <a href="https://pt-pt.facebook.com/ipsetubal/">link</a>
+            </li>
+        </ul>
     </div>
 </div>
