--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -8,28 +8,306 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+    <style>
+        /*css for calendar*/
+        * {
+            box-sizing: border-box;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+
+        .month {
+            padding: 70px 25px;
+            width: 100%;
+            background: #1abc9c;
+            text-align: center;
+        }
+
+            .month ul {
+                margin: 0;
+                padding: 0;
+            }
+
+                .month ul li {
+                    color: white;
+                    font-size: 20px;
+                    text-transform: uppercase;
+                    letter-spacing: 3px;
+                }
+
+            .month .prev {
+                float: left;
+                padding-top: 10px;
+            }
+
+            .month .next {
+                float: right;
+                padding-top: 10px;
+            }
+
+        .weekdays {
+            margin: 0;
+            padding: 10px 0;
+            background-color: #ddd;
+        }
+
+            .weekdays li {
+                display: inline-block;
+                width: 13.6%;
+                color: #666;
+                text-align: center;
+            }
+
+        .days {
+            padding: 10px 0;
+            background: #eee;
+            margin: 0;
+        }
+
+            .days li {
+                list-style-type: none;
+                display: inline-block;
+                width: 13.6%;
+                text-align: center;
+                margin-bottom: 5px;
+                font-size: 12px;
+                color: #777;
+            }
+
+                .days li .active {
+                    padding: 5px;
+                    background: #1abc9c;
+                    color: white !important
+                }
+
+        /* hamburger menu*/
+        body {
+            margin: 0;
+            padding: 0;
+            /* make it look decent enough */
+            background: white;
+            color: #cdcdcd;
+            font-family: "Avenir Next", "Avenir", sans-serif;
+        }
+
+        a {
+            text-decoration: none;
+            color: #232323;
+            transition: color 0.3s ease;
+        }
+
+            a:hover {
+                color: tomato;
+            }
+
+        #menuToggle {
+            display: block;
+            position: relative;
+            top: 0px;
+            left: 35px;
+            z-index: 1;
+            -webkit-user-select: none;
+            user-select: none;
+        }
+
+            #menuToggle input {
+                display: block;
+                width: 40px;
+                height: 32px;
+                position: absolute;
+                top: -7px;
+                left: -5px;
+                cursor: pointer;
+                opacity: 0; /* hide this */
+                z-index: 2; /* and place it over the hamburger */
+                -webkit-touch-callout: none;
+            }
+            /*
+        * Just a quick hamburger
+        */
+            #menuToggle span {
+                display: block;
+                width: 33px;
+                height: 4px;
+                margin-bottom: 5px;
+                position: relative;
+                background: #000000;
+                border-radius: 3px;
+                z-index: 1;
+                transform-origin: 4px 0px;
+                transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease;
+            }
+
+                #menuToggle span:first-child {
+                    transform-origin: 0% 0%;
+                }
+
+                #menuToggle span:nth-last-child(2) {
+                    transform-origin: 0% 100%;
+                }
+
+            /*
+        * Transform all the slices of hamburger
+        * into a crossmark.
+        */
+            #menuToggle input:checked ~ span {
+                opacity: 1;
+                transform: rotate(45deg) translate(-2px, -1px);
+                background: #232323;
+            }
+
+                /*
+        * But let's hide the middle one.
+        */
+                #menuToggle input:checked ~ span:nth-last-child(3) {
+                    opacity: 0;
+                    transform: rotate(0deg) scale(0.2, 0.2);
+                }
+
+                /*
+        * Ohyeah and the last one should go the other direction
+        */
+                #menuToggle input:checked ~ span:nth-last-child(2) {
+                    transform: rotate(-45deg) translate(0, -1px);
+                }
+
+        /*
+        * Make this absolute positioned
+        * at the top left of the screen
+        */
+        #menu {
+            position: absolute;
+            width: 300px;
+            margin: -100px 0 0 -50px;
+            padding: 50px;
+            padding-top: 125px;
+            background: #ededed;
+            list-style-type: none;
+            -webkit-font-smoothing: antialiased;
+            /* to stop flickering of text in safari */
+            transform-origin: 0% 0%;
+            transform: translate(-100%, 0);
+            transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+        }
+
+            #menu li {
+                padding: 10px 0;
+                font-size: 22px;
+            }
+        /*
+        * And let's slide it in from the left
+        */
+        #menuToggle input:checked ~ ul {
+            transform: none;
+        }
+    </style>
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Início", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
+
+<table style="width:100%">
+    <tr>
+        <th width="10%">
+            <nav role="navigation">
+                <div id="menuToggle">
+                    <!--
+                    A fake / hidden checkbox is used as click reciever,
+                    so you can use the :checked selector on it.
+                    -->
+                    <input type="checkbox" />
+                    <!--
+                    Some spans to act as a hamburger.
+                    They are acting like a real hamburger,
+                    not that McDonalds stuff.
+                    -->
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <!--
+                    Too bad the menu has to be inside of the button
+                    but hey, it's pure CSS magic.
+                    -->
+                    <ul id="menu">
+                        <a href=@Html.ActionLink("Início", "Index", "Home")>
+                        <a href="#"><li>Perfil Pessoal</li></a>
+                        <a href="#"><li>Candidaturas</li></a>
+                        <a href="#"><li>Entrevistas</li></a>
+                        <a href="#"><li>Parceiros</li></a>
+                        <a href=@Html.ActionLink("Login", "Login", "Home")>
+                    </ul>
+                </div>
+            </nav>
+        </th>
+        <th width="60%">
+            <img src="~/images/baner.png" alt="Baner">
+        </th>
+        <th width="30%">
+            <div class="month">
+                <ul>
+                    <li class="prev">&#10094;</li>
+                    <li class="next">&#10095;</li>
+                    <li>
+                        August<br>
+                        <span style="font-size:18px">2017</span>
+                    </li>
                 </ul>
+            </div>
+
+            <ul class="weekdays">
+                <li>Mo</li>
+                <li>Tu</li>
+                <li>We</li>
+                <li>Th</li>
+                <li>Fr</li>
+                <li>Sa</li>
+                <li>Su</li>
+            </ul>
+
+            <ul class="days">
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li><span class="active">10</span></li>
+                <li>11</li>
+                <li>12</li>
+                <li>13</li>
+                <li>14</li>
+                <li>15</li>
+                <li>16</li>
+                <li>17</li>
+                <li>18</li>
+                <li>19</li>
+                <li>20</li>
+                <li>21</li>
+                <li>22</li>
+                <li>23</li>
+                <li>24</li>
+                <li>25</li>
+                <li>26</li>
+                <li>27</li>
+                <li>28</li>
+                <li>29</li>
+                <li>30</li>
+                <li>31</li>
+            </ul>
+        </th>
+    </tr>
+</table>
+
+
+<body>
+    
+
+            <div class="navbar-collapse collapse">
                 @Html.Partial("_LoginPartial")
             </div>
-        </div>
-    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
