sem action link

--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -234,7 +234,7 @@
                         <a href="#"><li>Candidaturas</li></a>
                         <a href="#"><li>Entrevistas</li></a>
                         <a href="#"><li>Parceiros</li></a>
-                        <a href=@Html.ActionLink("Login", "Login", "Home")>
+                        <a href="Home/Login"><li>Login</li></a>
                     </ul>
                 </div>
             </nav>
