sem action link2

--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -229,7 +229,7 @@
                     but hey, it's pure CSS magic.
                     -->
                     <ul id="menu">
-                        <a href=@Html.ActionLink("Início", "Index", "Home")>
+                        <a href="Home/Index"><li>Inicio</li></a>
                         <a href="#"><li>Perfil Pessoal</li></a>
                         <a href="#"><li>Candidaturas</li></a>
                         <a href="#"><li>Entrevistas</li></a>
