--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -236,6 +236,7 @@
                         <a href="#"><li>Parceiros</li></a>
                         <li>@Html.ActionLink("Login", "Login", "Home")</li>
                     </ul>
+                    @Html.Partial("_LoginPartial")
                 </div>
             </nav>
         </th>
