--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -206,7 +206,10 @@
     </style>
 </head>
 
-<table style="width:100%">
+
+
+<body>
+    <table>
     <tr>
         <th width="10%">
             <nav role="navigation">
@@ -243,7 +246,9 @@
         <th width="60%">
             <img src="~/images/baner.png" alt="Baner">
         </th>
+
         <th width="30%">
+
             <div class="month">
                 <ul>
                     <li class="prev">&#10094;</li>
@@ -300,12 +305,7 @@
             </ul>
         </th>
     </tr>
-</table>
-
-
-<body>
-    
-
+    </table>
             <div class="navbar-collapse collapse">
                 @Html.Partial("_LoginPartial")
             </div>
