css index e layout

--- a/projetoesw3rd/Views/Home/Index.cshtml
+++ b/projetoesw3rd/Views/Home/Index.cshtml
@@ -1,4 +1,11 @@
-﻿@{
+﻿<style>
+    #myCarousel {
+        width: 60%;
+        margin-left: 20%;
+    }
+</style>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
