--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -14,13 +14,21 @@
             box-sizing: border-box;
         }
 
+        #menuzao {
+            margin-top: 73px;
+        }
+
         ul {
             list-style-type: none;
         }
 
+        table {
+            margin-left: 70%;
+            margin-top: -100px;
+        }
 
         .month {
-            padding: 70px 25px;
+            padding: 50px 25px;
             width: 100%;
             background: #1abc9c;
             text-align: center;
@@ -50,13 +58,12 @@
 
         .weekdays {
             margin: 0;
-            padding: 10px 0;
             background-color: #ddd;
         }
 
             .weekdays li {
                 display: inline-block;
-                width: 13.6%;
+                width: 13%;
                 color: #666;
                 text-align: center;
             }
@@ -70,7 +77,7 @@
             .days li {
                 list-style-type: none;
                 display: inline-block;
-                width: 13.6%;
+                width: 13%;
                 text-align: center;
                 margin-bottom: 5px;
                 font-size: 12px;
@@ -97,10 +104,12 @@
             text-decoration: none;
             color: #232323;
             transition: color 0.3s ease;
+            font-weight: bold;
         }
 
             a:hover {
                 color: tomato;
+                text-decoration: none;
             }
 
         #menuToggle {
@@ -203,52 +212,55 @@
         #menuToggle input:checked ~ ul {
             transform: none;
         }
+
+        #imgBanner {
+            width: 50%;
+            margin-left: 285px;
+            margin-top: -100px;
+            position: absolute;
+        }
     </style>
 </head>
 
 
 
 <body>
+    <div id="menuzao">
+        <nav role="navigation">
+            <div id="menuToggle">
+                <!--
+                A fake / hidden checkbox is used as click reciever,
+                so you can use the :checked selector on it.
+                -->
+                <input type="checkbox" />
+                <!--
+                Some spans to act as a hamburger.
+                They are acting like a real hamburger,
+                not that McDonalds stuff.
+                -->
+                <span></span>
+                <span></span>
+                <span></span>
+                <!--
+                Too bad the menu has to be inside of the button
+                but hey, it's pure CSS magic.
+                -->
+                <ul id="menu">
+                    <a href="Home/Index"><li>Inicio</li></a>
+                    <a href="#"><li>Perfil Pessoal</li></a>
+                    <a href="#"><li>Candidaturas</li></a>
+                    <a href="#"><li>Entrevistas</li></a>
+                    <a href="#"><li>Parceiros</li></a>
+                    <a href="Home/Login"><li>Login</li></a>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div id="banner">
+        <img id="imgBanner" src="~/images/baner.png" alt="Baner">
+    </div>
     <table>
-    <tr>
-        <th width="10%">
-            <nav role="navigation">
-                <div id="menuToggle">
-                    <!--
-                    A fake / hidden checkbox is used as click reciever,
-                    so you can use the :checked selector on it.
-                    -->
-                    <input type="checkbox" />
-                    <!--
-                    Some spans to act as a hamburger.
-                    They are acting like a real hamburger,
-                    not that McDonalds stuff.
-                    -->
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <!--
-                    Too bad the menu has to be inside of the button
-                    but hey, it's pure CSS magic.
-                    -->
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <a href="#"><li>Perfil Pessoal</li></a>
-                        <a href="#"><li>Candidaturas</li></a>
-                        <a href="#"><li>Entrevistas</li></a>
-                        <a href="#"><li>Parceiros</li></a>
-                        <li>@Html.ActionLink("Login", "Login", "Home")</li>
-                    </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
-            </nav>
-        </th>
-        <th width="60%">
-            <img src="~/images/baner.png" alt="Baner">
-        </th>
-
         <th width="30%">
-
             <div class="month">
                 <ul>
                     <li class="prev">&#10094;</li>
@@ -304,7 +316,6 @@
                 <li>31</li>
             </ul>
         </th>
-    </tr>
     </table>
             <div class="navbar-collapse collapse">
                 @Html.Partial("_LoginPartial")
