--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -246,12 +246,12 @@
                 but hey, it's pure CSS magic.
                 -->
                 <ul id="menu">
-                    <a href="Home/Index"><li>Inicio</li></a>
-                    <a href="#"><li>Perfil Pessoal</li></a>
-                    <a href="#"><li>Candidaturas</li></a>
-                    <a href="#"><li>Entrevistas</li></a>
-                    <a href="#"><li>Parceiros</li></a>
-                    <a href="Home/Login"><li>Login</li></a>
+                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
+                    <li>@Html.ActionLink("PerfilPessoal", "nome método", "nome controlador")</li>
+                    <li>@Html.ActionLink("Candidaturas", "nome método", "nome controlador")</li>
+                    <li>@Html.ActionLink("Entrevistas", "nome método", "nome controlador")</li>
+                    <li>@Html.ActionLink("Parceiros", "nome método", "nome controlador")</li>
+                    <li>@Html.ActionLink("Login", "Login", "Home")</li>
                 </ul>
             </div>
         </nav>
