--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -14,6 +14,11 @@
             box-sizing: border-box;
         }
 
+        header {
+            top:0;
+            width:100%;
+        }
+
         #menuzao {
             margin-top: 73px;
         }
@@ -23,8 +28,9 @@
         }
 
         table {
-            margin-left: 70%;
+            margin-left: 1045px;
             margin-top: -100px;
+            width: 450px;
         }
 
         .month {
@@ -92,6 +98,8 @@
 
         /* hamburger menu*/
         body {
+            width: 100%;
+            height: 100%;
             margin: 0;
             padding: 0;
             /* make it look decent enough */
@@ -225,106 +233,104 @@
 
 
 <body>
-    <div id="menuzao">
-        <nav role="navigation">
-            <div id="menuToggle">
-                <!--
-                A fake / hidden checkbox is used as click reciever,
-                so you can use the :checked selector on it.
-                -->
-                <input type="checkbox" />
-                <!--
-                Some spans to act as a hamburger.
-                They are acting like a real hamburger,
-                not that McDonalds stuff.
-                -->
-                <span></span>
-                <span></span>
-                <span></span>
-                <!--
-                Too bad the menu has to be inside of the button
-                but hey, it's pure CSS magic.
-                -->
-                <ul id="menu">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("PerfilPessoal", "nome método", "nome controlador")</li>
-                    <li>@Html.ActionLink("Candidaturas", "nome método", "nome controlador")</li>
-                    <li>@Html.ActionLink("Entrevistas", "nome método", "nome controlador")</li>
-                    <li>@Html.ActionLink("Parceiros", "nome método", "nome controlador")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Home")</li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <div id="banner">
-        <img id="imgBanner" src="~/images/baner.png" alt="Baner">
-    </div>
-    <table>
-        <th width="30%">
-            <div class="month">
-                <ul>
-                    <li class="prev">&#10094;</li>
-                    <li class="next">&#10095;</li>
-                    <li>
-                        August<br>
-                        <span style="font-size:18px">2017</span>
-                    </li>
-                </ul>
-            </div>
+    <header>
+        <div id="menuzao">
+            <nav role="navigation">
+                <div id="menuToggle">
+                    <!--
+                    A fake / hidden checkbox is used as click reciever,
+                    so you can use the :checked selector on it.
+                    -->
+                    <input type="checkbox" />
+                    <!--
+                    Some spans to act as a hamburger.
+                    They are acting like a real hamburger,
+                    not that McDonalds stuff.
+                    -->
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <!--
+                    Too bad the menu has to be inside of the button
+                    but hey, it's pure CSS magic.
+                    -->
+                    <ul id="menu">
+                        <li>@Html.ActionLink("Início", "Index", "Home")</li>
+                        <li>@Html.ActionLink("PerfilPessoal", "nome método", "nome controlador")</li>
+                        <li>@Html.ActionLink("Candidaturas", "nome método", "nome controlador")</li>
+                        <li>@Html.ActionLink("Entrevistas", "nome método", "nome controlador")</li>
+                        <li>@Html.ActionLink("Parceiros", "nome método", "nome controlador")</li>
+                        <li>@Html.ActionLink("Login", "Login", "Home")</li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div id="banner">
+            <img id="imgBanner" src="~/images/baner.png" alt="Baner">
+        </div>
+        <table>
+            <th width="30%">
+                <div class="month">
+                    <ul>
+                        <li class="prev">&#10094;</li>
+                        <li class="next">&#10095;</li>
+                        <li>
+                            August<br>
+                            <span style="font-size:18px">2017</span>
+                        </li>
+                    </ul>
+                </div>
 
-            <ul class="weekdays">
-                <li>Mo</li>
-                <li>Tu</li>
-                <li>We</li>
-                <li>Th</li>
-                <li>Fr</li>
-                <li>Sa</li>
-                <li>Su</li>
-            </ul>
+                <ul class="weekdays">
+                    <li>Mo</li>
+                    <li>Tu</li>
+                    <li>We</li>
+                    <li>Th</li>
+                    <li>Fr</li>
+                    <li>Sa</li>
+                    <li>Su</li>
+                </ul>
 
-            <ul class="days">
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-                <li>4</li>
-                <li>5</li>
-                <li>6</li>
-                <li>7</li>
-                <li>8</li>
-                <li>9</li>
-                <li><span class="active">10</span></li>
-                <li>11</li>
-                <li>12</li>
-                <li>13</li>
-                <li>14</li>
-                <li>15</li>
-                <li>16</li>
-                <li>17</li>
-                <li>18</li>
-                <li>19</li>
-                <li>20</li>
-                <li>21</li>
-                <li>22</li>
-                <li>23</li>
-                <li>24</li>
-                <li>25</li>
-                <li>26</li>
-                <li>27</li>
-                <li>28</li>
-                <li>29</li>
-                <li>30</li>
-                <li>31</li>
-            </ul>
-        </th>
-    </table>
-            <div class="navbar-collapse collapse">
-                @Html.Partial("_LoginPartial")
-            </div>
+                <ul class="days">
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                    <li>6</li>
+                    <li>7</li>
+                    <li>8</li>
+                    <li>9</li>
+                    <li><span class="active">10</span></li>
+                    <li>11</li>
+                    <li>12</li>
+                    <li>13</li>
+                    <li>14</li>
+                    <li>15</li>
+                    <li>16</li>
+                    <li>17</li>
+                    <li>18</li>
+                    <li>19</li>
+                    <li>20</li>
+                    <li>21</li>
+                    <li>22</li>
+                    <li>23</li>
+                    <li>24</li>
+                    <li>25</li>
+                    <li>26</li>
+                    <li>27</li>
+                    <li>28</li>
+                    <li>29</li>
+                    <li>30</li>
+                    <li>31</li>
+                </ul>
+            </th>
+        </table>
+    </header>
     <div class="container body-content">
         @RenderBody()
-        <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Meu Aplicativo ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - Instituto Politécnico de Setúbal</p>
         </footer>
     </div>
 
