--- a/projetoesw3rd/Views/Home/Index.cshtml
+++ b/projetoesw3rd/Views/Home/Index.cshtml
@@ -3,6 +3,19 @@
         width: 600px;
         margin-left: 20%;
     }
+
+    .row {
+        color: black;
+    }
+
+    .col-md-3 {
+        
+    }
+
+    .info {
+        text-align: left;
+        padding: 0;
+    }
 </style>
 
 @{
@@ -38,8 +51,8 @@
 
 <div class="row">
     <div class="col-md-3">
-        <h2> Vem conhecer os nossos cursos disponiveis! </h2>>
-        <ul>
+        <h2> Vem conhecer os nossos cursos disponiveis! </h2>
+        <ul class="info">
             <li>
                 Para saber mais informacoes sobre as nossas ofertas de curso clique neste
                 <a href="https://www.si.ips.pt/ests_si/web_base.gera_pagina?p_pagina=1166">link</a>
@@ -48,7 +61,7 @@
     </div>
     <div class="col-md-3">
         <h2>Vem conhecer a nossa proposta!</h2>
-        <ul>
+        <ul class="info">
             <li>
                 Para saberes mais informacoes sobre as nossas propostas de erasmus clica neste
                 <a href="https://www.ips.pt/ips_si/web_base.gera_pagina?P_pagina=30435">link</a>
@@ -57,7 +70,7 @@
     </div>
     <div class="col-md-3">
         <h2>O nosso Campus! </h2>
-        <ul>
+        <ul class="info">
             <li>
                 Para conheceres o nosso campus na integridade clica no
                 <a href="goo.gl/e9pJ89">link</a>
@@ -66,11 +79,11 @@
     </div>
     <div class="col-md-3">
         <h2>Vem conhecer a nossa pagina do Facebook! </h2>
-        <ul>
+        <ul class="info">
             <li>
                 Para conheceres a nossa pagina do Facebook clica neste
                 <a href="https://pt-pt.facebook.com/ipsetubal/">link</a>
             </li>
-        </ul>
-    </div>
+            </ul>
+</div>
 </div>
