--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -268,7 +268,7 @@
                         <li>@Html.ActionLink("Candidaturas", "nome método", "nome controlador")</li>
                         <li>@Html.ActionLink("Entrevistas", "nome método", "nome controlador")</li>
                         <li>@Html.ActionLink("Parceiros", "nome método", "nome controlador")</li>
-                        <li>@Html.ActionLink("Login", "Login", "Home")</li>
+                        <li>@Html.Partial("_LoginPartial")</li>
                     </ul>
                 </div>
             </nav>
