--- a/projetoesw3rd/Views/Shared/_LoginPartial.cshtml
+++ b/projetoesw3rd/Views/Shared/_LoginPartial.cshtml
@@ -2,15 +2,15 @@
 @if (Session["users_number"]!=null)
          //       (Request.IsAuthenticated)
 {
-                using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+                using (Html.BeginForm("Logout", "Home", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
                 {
                     @Html.AntiForgeryToken()
 
                     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Olá " + Session["users_number"].ToString() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Olá " + Session["users_number"].ToString() + "!", "Index", "Home", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Fazer logoff</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Logout</a></li>
     </ul>
     }
 }
