inicio de perfil de utilizador

--- a/projetoesw3rd/Views/Home/Welcome.cshtml
+++ b/projetoesw3rd/Views/Home/Welcome.cshtml
@@ -1,7 +1,6 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Welcome";
 }
 
-<h2>Welcome @Session["users_number"]</h2>
+<h2>Welcome @Session["users_name"]</h2>
 
