perfil acabado falta css

--- a/projetoesw3rd/Views/Home/UserProfile.cshtml
+++ b/projetoesw3rd/Views/Home/UserProfile.cshtml
@@ -13,34 +13,37 @@
                 <th>@Session["users_number"].ToString()</th>
             </tr>
            <tr>
-                <td>Name: </td>
-                <td>@Session["users_name"].ToString()</td>
-            </tr>
-            @*<tr>
-                <td>Centro comercial Moctezuma</td>
-                <td>Francisco Chang</td>
-
+                <th>Name: </th>
+                <th>@Session["users_name"].ToString()</th>
             </tr>
             <tr>
-                <td>Ernst Handel</td>
-                <td>Roland Mendel</td>
-
+                <th>Country: </th>
+                <th>@Session["users_country_id"].ToString()</th>
             </tr>
             <tr>
-                <td>Island Trading</td>
-                <td>Helen Bennett</td>
-
+                <th>Credits: </th>
+                <th>@Session["users_credits"].ToString()</th>
             </tr>
             <tr>
-                <td>Laughing Bacchus Winecellars</td>
-                <td>Yoshi Tannamuri</td>
-
+                <th>Illnesses &amp; Allergies: </th>
+                <th>@Session["users_diseases"].ToString()</th>
             </tr>
             <tr>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-
-            </tr>*@
+                <th>Date of birth: </th>
+                <th>@Session["users_dob"].ToString()</th>
+            </tr>
+            <tr>
+                <th>Email: </th>
+                <th>@Session["users_email"].ToString()</th>
+            </tr>
+            <tr>
+                <th>Mobility: </th>
+                <th>@Session["users_mobility"].ToString()</th>
+            </tr>
+            <tr>
+                <th>Password: </th>
+                <th>@Session["users_password"].ToString()</th>
+            </tr>
         </table>
     </div>
 <div>
