--- a/projetoesw3rd/Views/Shared/_LoginPartial.cshtml
+++ b/projetoesw3rd/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Olá " + Session["users_name"].ToString() + "!", "Index", "Home", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Olá " + Session["users_name"].ToString() + "!", "UserProfile", "Home", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Logout</a></li>
     </ul>
