--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             list-style-type: none;
         }
 
-        table {
+        #tabelaCalendario {
             margin-left: 970px;
             width: 390px;
             margin-top: -28px;
@@ -275,7 +275,7 @@
         <div id="banner">
             <img id="imgBanner" src="~/images/baner.png" alt="Baner">
         </div>
-        <table>
+        <table id="tabelaCalendario">
             <th width="30%">
                 <div class="month">
                     <ul>
