--- a/projetoesw3rd/Views/Home/Index.cshtml
+++ b/projetoesw3rd/Views/Home/Index.cshtml
@@ -51,37 +51,37 @@
 
 <div class="row">
     <div class="col-md-3">
-        <h2> Vem conhecer os nossos cursos disponiveis! </h2>
+        <h2> Meet our mobility options! </h2>
         <ul class="info">
             <li>
-                Para saber mais informacoes sobre as nossas ofertas de curso clique neste
+                For more information about our mobility options click on this
                 <a href="https://www.si.ips.pt/ests_si/web_base.gera_pagina?p_pagina=1166">link</a>
             </li>
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>Vem conhecer a nossa proposta!</h2>
+        <h2>Meet our proposals!</h2>
         <ul class="info">
             <li>
-                Para saberes mais informacoes sobre as nossas propostas de erasmus clica neste
+                For more information about our erasmus proposals click on this
                 <a href="https://www.ips.pt/ips_si/web_base.gera_pagina?P_pagina=30435">link</a>
             </li>
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>O nosso Campus! </h2>
+        <h2>Our Campus! </h2>
         <ul class="info">
             <li>
-                Para conheceres o nosso campus na integridade clica no
+                To know our whole campus click on this
                 <a href="goo.gl/e9pJ89">link</a>
             </li>
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>Vem conhecer a nossa pagina do Facebook! </h2>
+        <h2>Meet our Facebook page! </h2>
         <ul class="info">
             <li>
-                Para conheceres a nossa pagina do Facebook clica neste
+                To meet our Facebook page click on this
                 <a href="https://pt-pt.facebook.com/ipsetubal/">link</a>
             </li>
             </ul>
