--- a/projetoesw3rd/Views/Shared/_Layout.cshtml
+++ b/projetoesw3rd/Views/Shared/_Layout.cshtml
@@ -263,11 +263,11 @@
                     but hey, it's pure CSS magic.
                     -->
                     <ul id="menu">
-                        <li>@Html.ActionLink("Início", "Index", "Home")</li>
-                        <li>@Html.ActionLink("PerfilPessoal", "nome método", "nome controlador")</li>
-                        <li>@Html.ActionLink("Candidaturas", "nome método", "nome controlador")</li>
-                        <li>@Html.ActionLink("Entrevistas", "nome método", "nome controlador")</li>
-                        <li>@Html.ActionLink("Parceiros", "nome método", "nome controlador")</li>
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Profile", "nome método", "nome controlador")</li>
+                        <li>@Html.ActionLink("Applications", "nome método", "nome controlador")</li>
+                        <li>@Html.ActionLink("Interviews", "nome método", "nome controlador")</li>
+                        <li>@Html.ActionLink("Partners", "nome método", "nome controlador")</li>
                         <li>@Html.Partial("_LoginPartial")</li>
                     </ul>
                 </div>
